@startuml

enum Species {
  dog
  cat
}

interface Animal {
  +name: string
  +getName(): string
  +getSpecies(): Species
  +getSound(): string
}

class Dog {
  +name: string
  +getName(): string
  +getSpecies(): Species = "dog"
  +getSound(): string = "wan"
}

class Cat {
  +name: string
  +getName(): string
  +getSpecies(): Species = "cat"
  +getSound(): string = "nyan"
}

Dog ..|> Animal
Cat ..|> Animal

@enduml